--- a/layouts/partials/testimonial.html
+++ b/layouts/partials/testimonial.html
@@ -9,7 +9,7 @@
 
           <div class="quotes-slider-item">
             <h2>{{ .testimonialDetails }}</h2>
-            <span>-{{ .author }}</span>
+            <span>- {{ .author }} -</span>
           </div>
         {{end}}
         </div>
