--- a/layouts/404.html
+++ b/layouts/404.html
@@ -6,15 +6,7 @@
         <!--start error-content -->
         <div class="error-content">
           <h2>404 Error</h2>
-          <p>Oops! Page Not Found</p>
-          <form action="#">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search again...">
-              <div class="input-search">
-                <a href="#"> <i class="ti-search"></i></a>
-              </div>
-            </div>
-          </form>
+          <p>Page Not Found</p>
           <div class="error-content-link">
             <a href="{{.Site.BaseURL}}">
               <i class="ti-arrow-left"></i>
