--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -1,15 +1,5 @@
 {{ define "main"}}
 <section class="about">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="page-header">
-          <h2>{{ .Title}}</h2>
-          <p>{{ .Params.subTitle }}</p>
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 <section class="story">
   <div class="container">
@@ -20,21 +10,20 @@
         </div>
       </div>
       <div class="col-lg-6">
-        {{ with .Params.slideImage }}
         <div class="story-slider">
-          {{range . }}
+          {{range .Params.sliderImage }}
             <div class="slider-item">
               <img src="{{ .image | absURL }}" alt="images">
             </div>
           {{end}}
         </div>
-        {{ end }}
       </div>
     </div>
   </div>
 </section>
 {{ partial "gallery.html" . }}
 {{ partial "testimonial.html" . }}
+{{ partial "cta.html" . }}
 {{ partial "client.html" . }}
 {{ partial "investor.html" . }}
 {{ partial "contactAddress.html" . }}
