--- a/layouts/partials/blogSection.html
+++ b/layouts/partials/blogSection.html
@@ -26,7 +26,7 @@
       </div>
       {{end}}
       <div class="col-12 text-center">
-        <a href="{{.buttonTarget | absURL}}" class="btn btn-primary">View blog page</a>
+        <a href="{{.buttonTarget | absURL}}" class="btn btn-primary">Travel experience</a>
       </div>
     </div>
   </div>
