--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -6,10 +6,10 @@
       <div class="col-lg-12">
         <div class="cta-content">
           <h2>{{.title}}</h2>
-          <a href="{{.buttonTarget | absURL }}" class="btn btn-primary mb-3">
-              Schedule your day
+          <a href="{{ .priceLink }}" class="btn btn-primary mb-3">
+              booking.com
           </a>
-          <p style="font-size: 12px;">or check out <a class="scroll-to" href="{{ $.Site.BaseURL }}{{ .priceLink }}">pricing plans</a></p>
+          <p style="font-size: 12px;">or <a class="scroll-to" href="{{ $.Site.BaseURL }}{{ .additionalLink }}">contact us</a></p>
         </div>
       </div>
     </div>
