--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -9,7 +9,7 @@
           <a href="{{ .priceLink }}" class="btn btn-primary mb-3">
               booking.com
           </a>
-          <p style="font-size: 12px;">or <a class="scroll-to" href="{{ $.Site.BaseURL }}{{ .additionalLink }}">contact us</a></p>
+          <p style="font-size: 12px;">{{ T "or" }} <a class="scroll-to" href="{{ $.Site.BaseURL }}{{ .additionalLink }}">{{ T "contact_us" }}</a></p>
         </div>
       </div>
     </div>
