--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,7 +3,11 @@
     <title>{{.Title}}</title>
 
     {{ "<!--Meta For No Index-->" | safeHTML }}
-    <meta name="robots" content="noindex, Nofollow, Noimageindex">
+    {{ if eq .Params.sitemap_exclude true }}
+    <meta name="robots" content="noindex, nofollow, noarchive">
+    {{ else }}
+    <meta name="robots" content="index, follow, archive">
+    {{ end }}
 
     {{ "<!--mobile responsive meta-->" | safeHTML }}
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +15,16 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
+    
+    {{ if .IsTranslated }}
+    {{ range .Translations }}
+    <link rel="alternate" hreflang="{{ .Language.Lang }}" href="{{ .Permalink }}">
+    {{ end }}
+    <link rel="alternate" hreflang="{{ .Language.Lang }}" href="{{ .Permalink }}">
+    {{ end }}
+
     {{hugo.Generator}}
+
     {{ "<!-- Critical CSS -->" | safeHTML }}
     {{$style :=  resources.Get "scss/critical.scss" | resources.ToCSS | resources.Minify }}
     <link href="{{ $style.Permalink }}" rel="stylesheet" />
