--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -1,15 +1,17 @@
-{{with .Site.Data.cta}}
+{{with index .Site.Data .Language.Lang "cta" }}
 {{ if .enable }}
 <section class="cta">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <div class="cta-content">
-          <h2>{{.title}}</h2>
-          <a href="{{ .priceLink }}" class="btn btn-primary mb-3">
-              booking.com
-          </a>
-          <p style="font-size: 12px;">{{ T "or" }} <a class="scroll-to" href="{{ $.Site.BaseURL }}{{ .additionalLink }}">{{ T "contact_us" }}</a></p>
+        <div class="section-title">
+          <div class="cta-content">
+            <h2>{{.title}}</h2>
+            <a href="{{ .priceLink }}" class="btn btn-primary mb-3">
+                booking.com
+            </a>
+            <p style="font-size: 12px;">{{ T "or" }} <a class="scroll-to" href="{{ $.Site.BaseURL }}{{ .additionalLink }}">{{ T "contact_us" }}</a></p>
+          </div>
         </div>
       </div>
     </div>
