--- a/layouts/partials/gallery.html
+++ b/layouts/partials/gallery.html
@@ -1,4 +1,4 @@
-{{with .Site.Data.gallery}}
+{{with index .Site.Data .Language.Lang "gallery" }}
 {{if .enable}}
 <section class="gallery" id="gallery">
   <div class="container">
