--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,6 +34,11 @@
     <link rel="shortcut icon" href="{{"images/favicon.ico" | absURL}}" type="image/x-icon" />
     <link rel="icon" href="{{"images/favicon.png" | absURL}}" type="image/x-icon" />
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     {{ with .Site.Params.googleAnalytics }}
     {{ "<!-- Global Site Tag (gtag.js) - Google Analytics -->" | safeHTML }}
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ . }}"></script>
@@ -47,6 +52,5 @@
     </script>
     {{ end }}
 
-    
   </head>
 
